syntax = "proto3";

package gofigure;

message FileRequest {
  FileProperties properties = 1;
  //enum State {
  //  file = 0;
  //  directory = 1;
  //  absent = 2;
  //  symlink = 3;
  //  hardlink = 4;
  //}
  //State state = 2;
  bool recursive = 2;
  bool touch = 8;
  string linkTarget = 9;
}

message FileProperties {
  string path = 1;
  oneof owner {
    string ownerName = 2;
    int32 ownerID = 3;
  }
  oneof group {
    string groupName = 4;
    int32 groupID = 5;
  }
  // Everyone gets octal wrong, so only accept strings
  string mode = 6;
}

message Result {
  bool success = 1;
  string msg = 2;
}
